--- a/app/index.ejs
+++ b/app/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>electron-vue-project</title>
+    <title>智慧营业厅升级打包工具Vue版</title>
     <% if (htmlWebpackPlugin.options.appModules) { %>
       <!-- Add `app/node_modules` to global paths so `require` works properly in development -->
       <script>
